--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -345,15 +345,15 @@
        "\u001b[0;34m\u001b[0m    \u001b[0mbase\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfloat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2.718281828459045\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0maggregate_method\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'rra'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mconsensus_opts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0muse_raw\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNoneType\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0muse_raw\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNoneType\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mlayer\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNoneType\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mde_method\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m't-test'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNoneType\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mn_perms\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mseed\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1337\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
        "\u001b[0;34m\u001b[0m    \u001b[0mresource\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNoneType\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0manndata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_core\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0manndata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAnnData\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mDocstring:\u001b[0m\n",
        "Parameters\n",
        "----------\n",
@@ -372,7 +372,7 @@
        "    Exponent base used to reverse the log-transformation of matrix. Note that this is\n",
        "    relevant only for the `logfc` method.\n",
        "use_raw\n",
-       "    Use raw attribute of adata if present.\n",
+       "    Use raw attribute of adata if present. True, by default.\n",
        "layer\n",
        "    Layer in anndata.AnnData.layers to use. If None, use anndata.AnnData.X.\n",
        "de_method\n",
@@ -389,13 +389,13 @@
        "    Parameter to enable external resources to be passed. Expects a pandas dataframe\n",
        "    with [`ligand`, `receptor`] columns. None by default. If provided will overrule\n",
        "    the resource requested via `resource_name`\n",
-       "copy\n",
-       "    If true return `DataFrame` with results, else assign to `.uns`.\n",
+       "inplace\n",
+       "    If true return `DataFrame` with results, else assign inplace to `.uns`.\n",
        "\n",
        "\n",
        "Returns\n",
        "-------\n",
-       "If ``copy = True``, returns a `DataFrame` with ligand-receptor results\n",
+       "If ``inplace = False``, returns a `DataFrame` with ligand-receptor results\n",
        "Otherwise, modifies the ``adata`` object with the following key:\n",
        "    - :attr:`anndata.AnnData.uns` ``['liana_res']`` with the aforementioned DataFrame\n",
        "\u001b[0;31mFile:\u001b[0m      ~/anaconda3/lib/python3.8/site-packages/liana/method/sc/_rank_aggregate.py\n",
@@ -503,13 +503,8 @@
    "id": "7d529a44-8be9-4379-b79c-b2751562bb93",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\">\n",
-    "\n",
-    "**Note**\n",
     "    \n",
-    "By default, `liana` uses the `consensus` resource, which is composed by multiple expert-curated ligand-receptor resources, including CellPhoneDB, CellChat, ICELLNET, connectomeDB2020, and CellTalkDB.\n",
-    "\n",
-    "</div>  \n"
+    "By default, `liana` uses the `consensus` resource, which is composed by multiple expert-curated ligand-receptor resources, including CellPhoneDB, CellChat, ICELLNET, connectomeDB2020, and CellTalkDB.\n"
    ]
   },
   {
@@ -535,8 +530,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import indivudla methods\n",
+    "# import individual methods\n",
     "from liana.mt import singlecellsignalr, connectome, cellphonedb, natmi, logfc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4debc169-6d38-4768-9fbc-afc0ca396741",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "**Note**\n",
+    "\n",
+    "LIANA will by default use the `.raw` attribute of AnnData. If you wish to use .X set `use_raw` to `False`, or specify a `layer`.\n",
+    "    \n",
+    "    \n",
+    "</div>  "
    ]
   },
   {
@@ -544,10 +554,25 @@
    "execution_count": 11,
    "id": "e0aca516-4bad-4629-9c5e-57b84ca3b1ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using `.raw`!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:03<00:00, 303.08it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# run cellphonedb\n",
-    "adata = cellphonedb(adata, groupby='bulk_labels', use_raw=True, expr_prop=0.1)"
+    "cellphonedb(adata, groupby='bulk_labels', expr_prop=0.1, verbose=True)"
    ]
   },
   {
@@ -555,7 +580,7 @@
    "id": "7487870e-91b8-4beb-8956-0f0069555a7f",
    "metadata": {},
    "source": [
-    "By default, results will be assigned to `adata.uns['liana_res']`"
+    "By default, liana will be run **inplace** and results will be assigned to `adata.uns['liana_res']`"
    ]
   },
   {
@@ -807,7 +832,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788293125831)>"
+       "<ggplot: (8784862039233)>"
       ]
      },
      "execution_count": 14,
@@ -858,10 +883,50 @@
    "execution_count": 16,
    "id": "5aa0dd26-8677-4adf-a899-19aa69973746",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using `.raw`!\n",
+      "Assuming that counts were `natural` log-normalized!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  4%|▎         | 36/1000 [00:00<00:02, 359.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running CellPhoneDB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:02<00:00, 350.51it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Connectome\n",
+      "Running log2FC\n",
+      "Running NATMI\n",
+      "Running SingleCellSignalR\n"
+     ]
+    }
+   ],
    "source": [
     "# Run method\n",
-    "adata = rank_aggregate(adata, groupby='bulk_labels', use_raw=True, expr_prop=0)"
+    "rank_aggregate(adata, groupby='bulk_labels', expr_prop=0, verbose=True)"
    ]
   },
   {
@@ -1104,7 +1169,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788286463931)>"
+       "<ggplot: (8784861375067)>"
       ]
      },
      "execution_count": 20,
@@ -1164,7 +1229,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788286384565)>"
+       "<ggplot: (8784861279169)>"
       ]
      },
      "execution_count": 22,
@@ -1214,7 +1279,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788286316791)>"
+       "<ggplot: (8784861160650)>"
       ]
      },
      "execution_count": 24,
