update tests to cellchat max change

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -584,7 +584,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 274.29it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 260.85it/s]\n"
      ]
     }
    ],
@@ -850,7 +850,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8737816228795)>"
+       "<ggplot: (8789839834555)>"
       ]
      },
      "execution_count": 14,
@@ -903,7 +903,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 33/1000 [00:00<00:02, 326.75it/s]"
+      "  3%|▎         | 34/1000 [00:00<00:02, 330.93it/s]"
      ]
     },
     {
@@ -917,7 +917,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 313.90it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 292.47it/s]\n"
      ]
     },
     {
@@ -927,7 +927,20 @@
       "Running Connectome\n",
       "Running log2FC\n",
       "Running NATMI\n",
-      "Running SingleCellSignalR\n",
+      "Running SingleCellSignalR\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|▎         | 30/1000 [00:00<00:03, 297.44it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Running CellChat\n"
      ]
     },
@@ -935,7 +948,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 299.60it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 299.82it/s]\n"
      ]
     }
    ],
@@ -1211,7 +1224,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8737816117604)>"
+       "<ggplot: (8789837501790)>"
       ]
      },
      "execution_count": 19,
@@ -1271,7 +1284,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8737816034009)>"
+       "<ggplot: (8789837390041)>"
       ]
      },
      "execution_count": 21,
@@ -1321,7 +1334,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8737815911918)>"
+       "<ggplot: (8789837269745)>"
       ]
      },
      "execution_count": 23,
