restructure api docs, bump version

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -13,7 +13,7 @@
    "id": "6e4562e0-afa0-4b9c-a517-db18f12e1c40",
    "metadata": {},
    "source": [
-    "`liana` contains different statistical methods to infer `ligand-receptor` interactions from single-cell transcriptomics data omics data using prior knowledge.\n",
+    "`liana` provides different statistical methods to infer `ligand-receptor` interactions from single-cell transcriptomics data omics data using prior knowledge.\n",
     "In this notebook we showcase how to use liana in its' most basic form with toy data."
    ]
   },
@@ -584,7 +584,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 260.85it/s]\n"
+      "100%|██████████| 1000/1000 [00:04<00:00, 241.87it/s]\n"
      ]
     }
    ],
@@ -634,12 +634,10 @@
        "      <th>ligand_complex</th>\n",
        "      <th>ligand_means</th>\n",
        "      <th>ligand_props</th>\n",
-       "      <th>ligand_pvals</th>\n",
        "      <th>receptor</th>\n",
        "      <th>receptor_complex</th>\n",
        "      <th>receptor_means</th>\n",
        "      <th>receptor_props</th>\n",
-       "      <th>receptor_pvals</th>\n",
        "      <th>source</th>\n",
        "      <th>target</th>\n",
        "      <th>lr_means</th>\n",
@@ -653,12 +651,10 @@
        "      <td>HLA-DRA</td>\n",
        "      <td>0.625279</td>\n",
        "      <td>0.323529</td>\n",
-       "      <td>6.174542e-36</td>\n",
        "      <td>CD4</td>\n",
        "      <td>CD4</td>\n",
        "      <td>0.295691</td>\n",
        "      <td>0.220588</td>\n",
-       "      <td>0.763434</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>0.460485</td>\n",
@@ -670,12 +666,10 @@
        "      <td>HLA-DQA2</td>\n",
        "      <td>0.196956</td>\n",
        "      <td>0.117647</td>\n",
-       "      <td>4.070233e-37</td>\n",
        "      <td>CD4</td>\n",
        "      <td>CD4</td>\n",
        "      <td>0.295691</td>\n",
        "      <td>0.220588</td>\n",
-       "      <td>0.763434</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>0.246324</td>\n",
@@ -687,12 +681,10 @@
        "      <td>HLA-DQA1</td>\n",
        "      <td>0.253897</td>\n",
        "      <td>0.161765</td>\n",
-       "      <td>4.804243e-42</td>\n",
        "      <td>CD4</td>\n",
        "      <td>CD4</td>\n",
        "      <td>0.295691</td>\n",
        "      <td>0.220588</td>\n",
-       "      <td>0.763434</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>0.274794</td>\n",
@@ -704,12 +696,10 @@
        "      <td>HLA-DRB1</td>\n",
        "      <td>0.853603</td>\n",
        "      <td>0.382353</td>\n",
-       "      <td>2.758348e-24</td>\n",
        "      <td>CD4</td>\n",
        "      <td>CD4</td>\n",
        "      <td>0.295691</td>\n",
        "      <td>0.220588</td>\n",
-       "      <td>0.763434</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>0.574647</td>\n",
@@ -721,12 +711,10 @@
        "      <td>HLA-DQB1</td>\n",
        "      <td>0.401779</td>\n",
        "      <td>0.279412</td>\n",
-       "      <td>3.516375e-26</td>\n",
        "      <td>CD4</td>\n",
        "      <td>CD4</td>\n",
        "      <td>0.295691</td>\n",
        "      <td>0.220588</td>\n",
-       "      <td>0.763434</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>CD4+/CD25 T Reg</td>\n",
        "      <td>0.348735</td>\n",
@@ -737,26 +725,26 @@
        "</div>"
       ],
       "text/plain": [
-       "     ligand ligand_complex  ligand_means  ligand_props  ligand_pvals receptor  \\\n",
-       "0   HLA-DRA        HLA-DRA      0.625279      0.323529  6.174542e-36      CD4   \n",
-       "1  HLA-DQA2       HLA-DQA2      0.196956      0.117647  4.070233e-37      CD4   \n",
-       "2  HLA-DQA1       HLA-DQA1      0.253897      0.161765  4.804243e-42      CD4   \n",
-       "3  HLA-DRB1       HLA-DRB1      0.853603      0.382353  2.758348e-24      CD4   \n",
-       "4  HLA-DQB1       HLA-DQB1      0.401779      0.279412  3.516375e-26      CD4   \n",
+       "     ligand ligand_complex  ligand_means  ligand_props receptor  \\\n",
+       "0   HLA-DRA        HLA-DRA      0.625279      0.323529      CD4   \n",
+       "1  HLA-DQA2       HLA-DQA2      0.196956      0.117647      CD4   \n",
+       "2  HLA-DQA1       HLA-DQA1      0.253897      0.161765      CD4   \n",
+       "3  HLA-DRB1       HLA-DRB1      0.853603      0.382353      CD4   \n",
+       "4  HLA-DQB1       HLA-DQB1      0.401779      0.279412      CD4   \n",
        "\n",
-       "  receptor_complex  receptor_means  receptor_props  receptor_pvals  \\\n",
-       "0              CD4        0.295691        0.220588        0.763434   \n",
-       "1              CD4        0.295691        0.220588        0.763434   \n",
-       "2              CD4        0.295691        0.220588        0.763434   \n",
-       "3              CD4        0.295691        0.220588        0.763434   \n",
-       "4              CD4        0.295691        0.220588        0.763434   \n",
+       "  receptor_complex  receptor_means  receptor_props           source  \\\n",
+       "0              CD4        0.295691        0.220588  CD4+/CD25 T Reg   \n",
+       "1              CD4        0.295691        0.220588  CD4+/CD25 T Reg   \n",
+       "2              CD4        0.295691        0.220588  CD4+/CD25 T Reg   \n",
+       "3              CD4        0.295691        0.220588  CD4+/CD25 T Reg   \n",
+       "4              CD4        0.295691        0.220588  CD4+/CD25 T Reg   \n",
        "\n",
-       "            source           target  lr_means  pvals  \n",
-       "0  CD4+/CD25 T Reg  CD4+/CD25 T Reg  0.460485    1.0  \n",
-       "1  CD4+/CD25 T Reg  CD4+/CD25 T Reg  0.246324    1.0  \n",
-       "2  CD4+/CD25 T Reg  CD4+/CD25 T Reg  0.274794    1.0  \n",
-       "3  CD4+/CD25 T Reg  CD4+/CD25 T Reg  0.574647    1.0  \n",
-       "4  CD4+/CD25 T Reg  CD4+/CD25 T Reg  0.348735    1.0  "
+       "            target  lr_means  pvals  \n",
+       "0  CD4+/CD25 T Reg  0.460485    1.0  \n",
+       "1  CD4+/CD25 T Reg  0.246324    1.0  \n",
+       "2  CD4+/CD25 T Reg  0.274794    1.0  \n",
+       "3  CD4+/CD25 T Reg  0.574647    1.0  \n",
+       "4  CD4+/CD25 T Reg  0.348735    1.0  "
       ]
      },
      "execution_count": 12,
@@ -850,7 +838,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8789839834555)>"
+       "<ggplot: (8773012104117)>"
       ]
      },
      "execution_count": 14,
@@ -903,7 +891,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 34/1000 [00:00<00:02, 330.93it/s]"
+      "  3%|▎         | 28/1000 [00:00<00:03, 274.07it/s]"
      ]
     },
     {
@@ -917,7 +905,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 292.47it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 267.37it/s]\n"
      ]
     },
     {
@@ -934,7 +922,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 30/1000 [00:00<00:03, 297.44it/s]"
+      "  3%|▎         | 27/1000 [00:00<00:03, 260.87it/s]"
      ]
     },
     {
@@ -948,7 +936,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 299.82it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 268.35it/s]\n"
      ]
     }
    ],
@@ -1224,7 +1212,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8789837501790)>"
+       "<ggplot: (8773012129729)>"
       ]
      },
      "execution_count": 19,
@@ -1284,7 +1272,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8789837390041)>"
+       "<ggplot: (8773011997883)>"
       ]
      },
      "execution_count": 21,
@@ -1334,7 +1322,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8789837269745)>"
+       "<ggplot: (8773011844852)>"
       ]
      },
      "execution_count": 23,
