assert coverage fix

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -577,14 +577,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using `.raw`!\n"
+      "Using `.raw`!\n",
+      "0.94 of entities in the resource are missing from the data\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:04<00:00, 241.87it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 274.70it/s]\n"
      ]
     }
    ],
@@ -598,7 +599,8 @@
    "id": "7487870e-91b8-4beb-8956-0f0069555a7f",
    "metadata": {},
    "source": [
-    "By default, liana will be run **inplace** and results will be assigned to `adata.uns['liana_res']`"
+    "By default, liana will be run **inplace** and results will be assigned to `adata.uns['liana_res']`.\n",
+    "Note that the high proportion of missing entities here is expected, as we are working on the reduced dimensions data."
    ]
   },
   {
@@ -838,7 +840,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8773012104117)>"
+       "<ggplot: (8726168566721)>"
       ]
      },
      "execution_count": 14,
@@ -884,6 +886,7 @@
      "output_type": "stream",
      "text": [
       "Using `.raw`!\n",
+      "0.94 of entities in the resource are missing from the data\n",
       "Assuming that counts were `natural` log-normalized!\n"
      ]
     },
@@ -891,7 +894,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 28/1000 [00:00<00:03, 274.07it/s]"
+      "  3%|▎         | 32/1000 [00:00<00:03, 313.38it/s]"
      ]
     },
     {
@@ -905,7 +908,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 267.37it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 306.19it/s]\n"
      ]
     },
     {
@@ -915,20 +918,7 @@
       "Running Connectome\n",
       "Running log2FC\n",
       "Running NATMI\n",
-      "Running SingleCellSignalR\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  3%|▎         | 27/1000 [00:00<00:03, 260.87it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Running SingleCellSignalR\n",
       "Running CellChat\n"
      ]
     },
@@ -936,7 +926,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 268.35it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 307.34it/s]\n"
      ]
     }
    ],
@@ -1212,7 +1202,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8773012129729)>"
+       "<ggplot: (8726167404834)>"
       ]
      },
      "execution_count": 19,
@@ -1272,7 +1262,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8773011997883)>"
+       "<ggplot: (8726168376251)>"
       ]
      },
      "execution_count": 21,
@@ -1322,7 +1312,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8773011844852)>"
+       "<ggplot: (8726167724541)>"
       ]
      },
      "execution_count": 23,
