--- a/spatialDM_reimplement.ipynb
+++ b/spatialDM_reimplement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d6fea9cf-3f0c-4404-89a6-08dd44aad58b",
    "metadata": {},
    "outputs": [],
@@ -14,15 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "308c8075-f3f9-4a50-bfa1-f9c2944e297d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5f089877-3865-4b63-be9a-4e9aecba4122",
    "metadata": {},
    "outputs": [],
@@ -32,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2ace542e-7438-4975-95fa-0e8a4096c226",
    "metadata": {},
    "outputs": [],
@@ -50,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a3ff315f-3d45-40f1-9166-d7dbe195b11b",
    "metadata": {},
    "outputs": [],
@@ -69,17 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d1afd755-1c4a-48a1-a18c-a4774972a1f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/lib/python3.8/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
    "source": [
     "import squidpy as sq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b4c57633-eb60-4cf9-8ce9-c5f4f6920842",
    "metadata": {},
    "outputs": [],
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "df54a925-6d32-4960-98f6-a02735c957c6",
    "metadata": {},
    "outputs": [],
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "99f519c5-b804-49e3-935c-8f377420cb0b",
    "metadata": {},
    "outputs": [],
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bd5c93b9-17f2-47ea-8092-85d280d88920",
    "metadata": {},
    "outputs": [],
